--- a/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
@@ -3,12 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:BambuConfigGenerator"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-    xmlns:views1="clr-namespace:BambuConfigGenerator.Views"
     Title="MainWindow"
-    Width="400"
-    Height="450"
-    mc:Ignorable="d">
-</views:MvxWindow>
+    Width="1000"
+    Height="800"
+    mc:Ignorable="d" />
