--- a/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<views:MvxWindow
+<views:MvxWindow
     x:Class="BambuConfigGenerator.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,5 +7,6 @@
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     Title="MainWindow"
     Width="1000"
-    Height="800"
-    mc:Ignorable="d" />
+    Height="750"
+    mc:Ignorable="d">
+</views:MvxWindow>
