--- a/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
@@ -3,11 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:BambuConfigGenerator.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:BambuConfigGenerator.Core.ViewModels;assembly=BambuConfigGenerator.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-    xmlns:customControls="clr-namespace:BambuConfigGenerator.CustomControls"
     Width="1000"
     Height="750"
     d:DataContext="{d:DesignInstance viewModels:FileGeneratorViewModel}"
@@ -68,9 +66,6 @@
         <Style TargetType="CheckBox">
             <Setter Property="Foreground" Value="#7EE07E"/>
         </Style>
-
-
-
 
         <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
             <Grid>
@@ -293,7 +288,43 @@
             Grid.Column="1"
             HorizontalAlignment="Stretch"
             Text="{Binding Serial}"
-            TextWrapping="Wrap" />
+            TextWrapping="Wrap" >
+            <TextBox.Style>
+                <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    <Setter Property="Margin" Value="20,15,0,15" />
+                    <Setter Property="Padding" Value="5" />
+                    <Setter Property="Foreground" Value="#7EE07E"/>
+                    <Setter Property="Background" Value="#383838" />
+                    <Setter Property="BorderBrush" Value="#424242" />
+                    <Setter Property="BorderThickness" Value="1" />
+                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                    <Setter Property="FontSize" Value="18" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Resources>
+                        <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                            <VisualBrush.Visual>
+                                <Label Content="Color, model, serial..." Foreground="#727272" 
+                                       FontSize="18"
+                                       Background="Transparent" />
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Style.Resources>
+                    <Style.Triggers>
+                        <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            <Setter Property="BorderBrush" Value="#424242" />
+                        </Trigger>
+                        <Trigger Property="Text" Value="{x:Null}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            <Setter Property="BorderBrush" Value="#424242" />
+                        </Trigger>
+                        <Trigger Property="IsKeyboardFocused" Value="True">
+                            <Setter Property="Background" Value="#383838" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
 
         <!--  Recommended Temperature  -->
         <Label
