--- a/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/FileGeneratorView.xaml
@@ -15,7 +15,7 @@
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="20,15,0,15" />
             <Setter Property="Padding" Value="5" />
-            <Setter Property="Foreground" Value="#7EE07E"/>
+            <Setter Property="Foreground" Value="#7EE07E" />
             <Setter Property="Background" Value="#383838" />
             <Setter Property="BorderBrush" Value="#424242" />
             <Setter Property="BorderThickness" Value="1" />
@@ -24,7 +24,7 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
         <Style TargetType="Label">
-            <Setter Property="Foreground" Value="#FAFAFA"/>
+            <Setter Property="Foreground" Value="#FAFAFA" />
             <Setter Property="FontSize" Value="18" />
             <Setter Property="Margin" Value="20,0,0,0" />
             <Setter Property="VerticalAlignment" Value="Center" />
@@ -32,7 +32,7 @@
         <Style TargetType="Button">
             <Setter Property="Margin" Value="5,5,0,5" />
             <Setter Property="Padding" Value="0" />
-            <Setter Property="Foreground" Value="#7EE07E"/>
+            <Setter Property="Foreground" Value="#7EE07E" />
             <Setter Property="Background" Value="#2E2E2E" />
             <Setter Property="BorderBrush" Value="#424242" />
             <Setter Property="BorderThickness" Value="1" />
@@ -44,27 +44,30 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="Black"
+                            BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#64569DE5"/>
-                    <Setter Property="BorderBrush" Value="#569DE5"/>
+                    <Setter Property="Background" Value="#64569DE5" />
+                    <Setter Property="BorderBrush" Value="#569DE5" />
                 </Trigger>
             </Style.Triggers>
         </Style>
 
         <Style TargetType="ListView">
-            <Setter Property="Background" Value="#383838"/>
-            <Setter Property="BorderBrush" Value="#424242"/>
-            <Setter Property="Foreground" Value="#7EE07E"/>
+            <Setter Property="Background" Value="#383838" />
+            <Setter Property="BorderBrush" Value="#424242" />
+            <Setter Property="Foreground" Value="#7EE07E" />
         </Style>
         <Style TargetType="CheckBox">
-            <Setter Property="Foreground" Value="#7EE07E"/>
+            <Setter Property="Foreground" Value="#7EE07E" />
         </Style>
 
         <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
@@ -73,25 +76,27 @@
                     <ColumnDefinition />
                     <ColumnDefinition Width="20" />
                 </Grid.ColumnDefinitions>
-                <Border x:Name="Border" 
-                        Grid.ColumnSpan="2"
-                        CornerRadius="0"
-                        Background="#FF3F3F3F"
-                        BorderBrush="#FF97A0A5"
-                        BorderThickness="1" />
-                <Border Grid.Column="0"
-                        CornerRadius="0" 
-                        Margin="1" 
-                        Background="#FF3F3F3F" 
-                        BorderBrush="#FF97A0A5"
-                        BorderThickness="0,0,1,0" />
-                <Path x:Name="Arrow"
-                      Grid.Column="1"     
-                      Fill="White"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
-                    />
+                <Border
+                    x:Name="Border"
+                    Grid.ColumnSpan="2"
+                    Background="#FF3F3F3F"
+                    BorderBrush="#FF97A0A5"
+                    BorderThickness="1"
+                    CornerRadius="0" />
+                <Border
+                    Grid.Column="0"
+                    Margin="1"
+                    Background="#FF3F3F3F"
+                    BorderBrush="#FF97A0A5"
+                    BorderThickness="0,0,1,0"
+                    CornerRadius="0" />
+                <Path
+                    x:Name="Arrow"
+                    Grid.Column="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
+                    Fill="White" />
             </Grid>
             <!--<ControlTemplate.Triggers>
                 <Trigger Property="ToggleButton.IsMouseOver" Value="true">
@@ -110,65 +115,71 @@
         </ControlTemplate>
 
         <ControlTemplate x:Key="ComboBoxTextBox" TargetType="{x:Type TextBox}">
-            <Border x:Name="PART_ContentHost" Focusable="False" Background="{TemplateBinding Background}" />
+            <Border
+                x:Name="PART_ContentHost"
+                Background="{TemplateBinding Background}"
+                Focusable="False" />
         </ControlTemplate>
 
         <Style x:Key="{x:Type ComboBox}" TargetType="{x:Type ComboBox}">
-            <Setter Property="SnapsToDevicePixels" Value="true"/>
-            <Setter Property="OverridesDefaultStyle" Value="true"/>
-            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
-            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
-            <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
-            <Setter Property="MinWidth" Value="120"/>
-            <Setter Property="MinHeight" Value="20"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+            <Setter Property="ScrollViewer.CanContentScroll" Value="true" />
+            <Setter Property="MinWidth" Value="120" />
+            <Setter Property="MinHeight" Value="20" />
+            <Setter Property="Foreground" Value="White" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBox}">
                         <Grid>
-                            <ToggleButton 
-                                Name="ToggleButton" 
-                                Template="{StaticResource ComboBoxToggleButton}" 
-                                Grid.Column="2" 
+                            <ToggleButton
+                                Name="ToggleButton"
+                                Grid.Column="2"
+                                ClickMode="Press"
                                 Focusable="false"
-                                IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"
-                                ClickMode="Press">
-                            </ToggleButton>
-                            <ContentPresenter Name="ContentSite" IsHitTestVisible="False"  Content="{TemplateBinding SelectionBoxItem}"
+                                IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                Template="{StaticResource ComboBoxToggleButton}" />
+                            <ContentPresenter
+                                Name="ContentSite"
+                                Margin="3,3,23,3"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                Content="{TemplateBinding SelectionBoxItem}"
                                 ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
                                 ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                IsHitTestVisible="False" />
+                            <TextBox
+                                x:Name="PART_EditableTextBox"
                                 Margin="3,3,23,3"
+                                HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
-                                HorizontalAlignment="Left" />
-                            <TextBox x:Name="PART_EditableTextBox"
-                                Style="{x:Null}" 
-                                Template="{StaticResource ComboBoxTextBox}" 
-                                HorizontalAlignment="Left" 
-                                VerticalAlignment="Center" 
-                                Margin="3,3,23,3"
-                                Focusable="True" 
                                 Background="#FF3F3F3F"
+                                Focusable="True"
                                 Foreground="Green"
-                                Visibility="Hidden"
-                                IsReadOnly="{TemplateBinding IsReadOnly}"/>
-                            <Popup 
+                                IsReadOnly="{TemplateBinding IsReadOnly}"
+                                Style="{x:Null}"
+                                Template="{StaticResource ComboBoxTextBox}"
+                                Visibility="Hidden" />
+                            <Popup
                                 Name="Popup"
-                                Placement="Bottom"
-                                IsOpen="{TemplateBinding IsDropDownOpen}"
-                                AllowsTransparency="True" 
+                                AllowsTransparency="True"
                                 Focusable="False"
+                                IsOpen="{TemplateBinding IsDropDownOpen}"
+                                Placement="Bottom"
                                 PopupAnimation="Slide">
 
-                                <Grid Name="DropDown"
-                                  SnapsToDevicePixels="True"                
-                                  MinWidth="{TemplateBinding ActualWidth}"
-                                  MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                    <Border 
-                                    x:Name="DropDownBorder"
-                                    Background="#FF3F3F3F"
-                                     
-                                    BorderThickness="1"
-                                    BorderBrush="#888888"/>
+                                <Grid
+                                    Name="DropDown"
+                                    MinWidth="{TemplateBinding ActualWidth}"
+                                    MaxHeight="{TemplateBinding MaxDropDownHeight}"
+                                    SnapsToDevicePixels="True">
+                                    <Border
+                                        x:Name="DropDownBorder"
+                                        Background="#FF3F3F3F"
+                                        BorderBrush="#888888"
+                                        BorderThickness="1" />
                                     <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
                                         <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
                                     </ScrollViewer>
@@ -177,50 +188,50 @@
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger Property="HasItems" Value="false">
-                                <Setter TargetName="DropDownBorder" Property="MinHeight" Value="95"/>
+                                <Setter TargetName="DropDownBorder" Property="MinHeight" Value="95" />
                             </Trigger>
                             <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Foreground" Value="#888888"/>
+                                <Setter Property="Foreground" Value="#888888" />
                             </Trigger>
                             <Trigger Property="IsGrouping" Value="true">
-                                <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
+                                <Setter Property="ScrollViewer.CanContentScroll" Value="false" />
                             </Trigger>
                             <Trigger SourceName="Popup" Property="Popup.AllowsTransparency" Value="true">
-                                <Setter TargetName="DropDownBorder" Property="CornerRadius" Value="0"/>
-                                <Setter TargetName="DropDownBorder" Property="Margin" Value="0,2,0,0"/>
+                                <Setter TargetName="DropDownBorder" Property="CornerRadius" Value="0" />
+                                <Setter TargetName="DropDownBorder" Property="Margin" Value="0,2,0,0" />
                             </Trigger>
-                            <Trigger Property="IsEditable"  Value="true">
-                                <Setter Property="IsTabStop" Value="false"/>
-                                <Setter TargetName="PART_EditableTextBox" Property="Visibility" Value="Visible"/>
-                                <Setter TargetName="ContentSite" Property="Visibility" Value="Hidden"/>
+                            <Trigger Property="IsEditable" Value="true">
+                                <Setter Property="IsTabStop" Value="false" />
+                                <Setter TargetName="PART_EditableTextBox" Property="Visibility" Value="Visible" />
+                                <Setter TargetName="ContentSite" Property="Visibility" Value="Hidden" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Style.Triggers>
-            </Style.Triggers>
+            <Style.Triggers />
         </Style>
 
-        <!-- SimpleStyles: ComboBoxItem -->
+        <!--  SimpleStyles: ComboBoxItem  -->
         <Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
-            <Setter Property="SnapsToDevicePixels" Value="true"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Setter Property="SnapsToDevicePixels" Value="true" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="OverridesDefaultStyle" Value="true" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBoxItem}">
-                        <Border Name="Border"
-                                  Padding="2"
-                                  SnapsToDevicePixels="true">
+                        <Border
+                            Name="Border"
+                            Padding="2"
+                            SnapsToDevicePixels="true">
                             <ContentPresenter />
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsHighlighted" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="#FF4F4F4F"/>
+                                <Setter TargetName="Border" Property="Background" Value="#FF4F4F4F" />
                             </Trigger>
                             <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Foreground" Value="#888888"/>
+                                <Setter Property="Foreground" Value="#888888" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -268,8 +279,8 @@
         <ComboBox
             Grid.Row="1"
             Grid.Column="1"
-            Height="34"
             Width="200"
+            Height="34"
             Margin="20,10"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
@@ -288,12 +299,12 @@
             Grid.Column="1"
             HorizontalAlignment="Stretch"
             Text="{Binding Serial}"
-            TextWrapping="Wrap" >
+            TextWrapping="Wrap">
             <TextBox.Style>
-                <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                <Style xmlns:sys="clr-namespace:System;assembly=mscorlib" TargetType="TextBox">
                     <Setter Property="Margin" Value="20,15,0,15" />
                     <Setter Property="Padding" Value="5" />
-                    <Setter Property="Foreground" Value="#7EE07E"/>
+                    <Setter Property="Foreground" Value="#7EE07E" />
                     <Setter Property="Background" Value="#383838" />
                     <Setter Property="BorderBrush" Value="#424242" />
                     <Setter Property="BorderThickness" Value="1" />
@@ -301,11 +312,17 @@
                     <Setter Property="FontSize" Value="18" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Resources>
-                        <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                        <VisualBrush
+                            x:Key="CueBannerBrush"
+                            AlignmentX="Left"
+                            AlignmentY="Center"
+                            Stretch="None">
                             <VisualBrush.Visual>
-                                <Label Content="Color, model, serial..." Foreground="#727272" 
-                                       FontSize="18"
-                                       Background="Transparent" />
+                                <Label
+                                    Background="Transparent"
+                                    Content="Color, model, serial..."
+                                    FontSize="18"
+                                    Foreground="#727272" />
                             </VisualBrush.Visual>
                         </VisualBrush>
                     </Style.Resources>
@@ -412,8 +429,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Orientation="Vertical">
-                <Label Content="Select printers:"
-                       Margin="20,0"/>
+                <Label Margin="20,0" Content="Select printers:" />
                 <ListView
                     Width="200"
                     Margin="20,0"
@@ -433,8 +449,7 @@
             </StackPanel>
 
             <StackPanel Grid.Column="1" Orientation="Vertical">
-                <Label Content="Select nozzles:"
-                       Margin="20,0"/>
+                <Label Margin="20,0" Content="Select nozzles:" />
                 <ListView
                     Width="200"
                     Margin="20,0"
