--- a/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/MainWindow.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     Title="MainWindow"
+    Background="#242424"
     Width="1000"
     Height="750"
     mc:Ignorable="d">
