--- a/BambuConfigGenerator/BambuConfigGenerator/Resources/Colors.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Resources/Colors.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Color x:Key="PrimaryColor">#7EE07E</Color>
     <Color x:Key="BackgroundColor">#383838</Color>
     <Color x:Key="BackgroundColorDark">#383838</Color>
