--- a/BambuConfigGenerator/BambuConfigGenerator/Views/FilamentEditorView.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/FilamentEditorView.xaml
@@ -1,13 +1,14 @@
-﻿<views:MvxWpfView x:TypeArguments="viewModels:FilamentEditorViewModel" x:Class="BambuConfigGenerator.Views.FilamentEditorView"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                  xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-                  xmlns:viewModels="clr-namespace:BambuConfigGenerator.Core.ViewModels;assembly=BambuConfigGenerator.Core"
-                  mc:Ignorable="d" 
-                  d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+﻿<views:MvxWpfView
+    x:Class="BambuConfigGenerator.Views.FilamentEditorView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:BambuConfigGenerator.Core.ViewModels;assembly=BambuConfigGenerator.Core"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:TypeArguments="viewModels:FilamentEditorViewModel"
+    mc:Ignorable="d">
+    <Grid />
 </views:MvxWpfView>
