--- a/BambuConfigGenerator/BambuConfigGenerator/Views/FilamentEditorView.xaml
+++ b/BambuConfigGenerator/BambuConfigGenerator/Views/FilamentEditorView.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:BambuConfigGenerator.Core.ViewModels;assembly=BambuConfigGenerator.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:TypeArguments="viewModels:FilamentEditorViewModel"
@@ -30,6 +31,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Label
                     Grid.Row="0"
@@ -43,10 +45,20 @@
                 <Button
                     Grid.Row="1"
                     Grid.Column="1"
-                    Width="100"
+                    Width="140"
                     Command="{Binding SelectFolderCommand}"
-                    Margin="20,0"
+                    Margin="10,0"
                     Content="Select folder" />
+                <Button
+                    Grid.Column="2"
+                    Grid.Row="1"
+                    Width="40"
+                    Height="40"
+                    Margin="0"
+                    VerticalAlignment="Top"
+                    Command="{Binding OpenFolderCommand}">
+                    <svgc:SvgViewbox Source="/Resources/refresh.svg" />
+                </Button>
             </Grid>
 
             <Grid Grid.Row="1">
